--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,14 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
+  # 定时触发编译(每天早5点)
+  schedule:
+     - cron: '0 6 * * *'
+  # 点☆Star触发开始编译
+  watch:  
+     types: [started]
+  
+  
 jobs:
   build:
       runs-on: ubuntu-latest
