--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
             uses: ilteoood/docker_buildx@master
             with:
               publish: true
-              imageName: 740162752/caddy-dnspod-docker
+              imageName: 740162752/caddy-dns-plugin
               platform: linux/amd64,linux/arm64/v8,linux/arm/v7,linux/arm/v6 # 你准备构建的镜像平台
               tag: latest # 默认latest，可以针对平台，修改tag
               dockerUser: 740162752 # docker hub userid
