--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
   # 定时触发编译(每天早5点)
   schedule:
-     - cron: '0 6 * * *'
+     - cron: '0 5 * * *'
   # 点☆Star触发开始编译
   watch:  
      types: [started]
@@ -25,7 +25,7 @@ jobs:
             with:
               publish: true
               imageName: 740162752/caddy-dns_plugins
-              platform: linux/amd64,linux/arm64/v8,linux/arm/v7,linux/arm/v6 # 你准备构建的镜像平台
+              platform: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6,linux/ppc64le,linux/s390x # 你准备构建的镜像平台
               tag: latest # 默认latest，可以针对平台，修改tag
               dockerUser: 740162752 # docker hub userid
               dockerPassword: 1357954163cxf # docker hub password
