--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -2,10 +2,9 @@ name: main
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  
+    branches:
+      - dev
+
 jobs:
   build:
       runs-on: ubuntu-latest
