--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,7 @@ name: main
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [mai]
   # 定时触发编译(每天早5点)
   schedule:
      - cron: '0 5 * * *'
